# agentic-rag-db2

./: .gitignore  README.md  agent.ipynb  labs.md  pyproject.toml  requirements.txt  sample.env
.ipynb_checkpoints/: agent-checkpoint.ipynb
deployment/: README.md  combined_app.py  ingestion_api.py  main.py  pyproject.toml  requirements.txt  search_api.py  test_config.py  test_db2_connection.py  test_granite_setup.py  test_setup.py
deployment/data_pipeline/: app.py
deployment/search_pipeline/: app.py  core.py
deployment/shared/: config.py  db_manager.py  granite_db2_store.py  langgraph_workflow.py  simple_db.py
document-ingestion-api/: README.md  ingestion_api.py  main.py  pyproject.toml
gateway-api/: README.md  gateway_api.py  pyproject.toml
ingestion-api/: README.md  main.py  pyproject.toml
prototype/: README.md  agent.ipynb
search-api/: README.md  pyproject.toml  search_api.py
