[project]
name = "agentic-rag-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "huggingface-hub>=0.33.5",
    "ibm-db>=3.2.6",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-db2>=0.1.6",
    "langchain-ibm>=0.3.15",
    "langchain-ollama>=0.1.0",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.5.4",
    "llama-cpp-python>=0.3.14",
    "pydantic>=2.11.7",
    "pygraphviz>=1.14",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "spacy>=3.8.7",
    "tiktoken>=0.9.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.35.0",
]
