[project]
name = "document-ingestion-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "ibm-db>=3.2.6",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-db2>=0.1.6",
    "langchain-ibm>=0.3.15",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.5.4",
    "llama-cpp-python>=0.3.14",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "spacy>=3.8.7",
    "trafilatura>=2.0.0",
    "uvicorn>=0.35.0",
]
