[project]
name = "search-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "ibm-db>=3.2.6",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-db2>=0.1.6",
    "langchain-ibm>=0.3.15",
    "langgraph>=0.6.2",
    "llama-cpp-python>=0.3.14",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
